--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     androidTestImplementation 'androidx.test:rules:1.2.0-alpha03'
+
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 }
 
 apply plugin: 'com.google.gms.google-services'
