--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -30,9 +32,16 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
 
-    implementation 'com.google.firebase:firebase-core:17.0.0'
+    def constraint_version = "1.1.3"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
+
+    def firebase_version = "17.0.0"
+    implementation "com.google.firebase:firebase-core:$firebase_version"
+    implementation "com.google.firebase:firebase-analytics:$firebase_version"
+    def firebase_messaging_version = "20.0.0"
+    implementation "com.google.firebase:firebase-messaging:$firebase_messaging_version"
+
 
     implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
     implementation "com.squareup.retrofit2:converter-moshi:${versions.retrofit}"
@@ -57,7 +66,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     androidTestImplementation 'androidx.test:rules:1.2.0-alpha03'
 
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-}
 
-apply plugin: 'com.google.gms.google-services'
+}
