add notification setting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,9 @@
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-        <meta-data
-                android:name="firebase_messaging_auto_init_enabled"
-                android:value="false" />
         <meta-data
                 android:name="firebase_analytics_collection_enabled"
                 android:value="false" />
@@ -30,14 +26,7 @@
                 android:name=".ui.SettingActivity"
                 android:theme="@style/AppTheme.ActionBar.Transparent" />
 
-        <service
-                android:name=".ReminderMessagingService"
-                android:enabled="true"
-                android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
+        <service android:name=".ui.RemindService" />
     </application>
 
 </manifest>
