デザイン調整・不必要ライブラリの削除

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ buildscript {
             'dagger2': '2.11',
             'coroutine': '1.1.0',
             'lifecycleExtensions': '2.0.0',
-            'recyclerView': '1.0.0'
+            'recyclerView': '1.0.0',
+            'material': '1.2.0-alpha06'
     ]
 
     repositories {
