--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,7 @@ dependencies {
     def firebase_messaging_version = "20.0.0"
     implementation "com.google.firebase:firebase-messaging:$firebase_messaging_version"
 
-
-    implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
-    implementation "com.squareup.retrofit2:converter-moshi:${versions.retrofit}"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-
-    // coroutine
+    // Coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutine}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutine}"
 
@@ -58,13 +53,11 @@ dependencies {
     // lifecycle-extensions
     implementation "androidx.lifecycle:lifecycle-extensions:${versions.lifecycleExtensions}"
 
-    // recyclerView
-    implementation "androidx.recyclerview:recyclerview:${versions.recyclerView}"
+    // Material
+    implementation "com.google.android.material:material:${versions.material}"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     androidTestImplementation 'androidx.test:rules:1.2.0-alpha03'
-
-
 }
