--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.a1440"
+        applicationId "sho.ushikubo.a1440"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
@@ -38,11 +38,8 @@ dependencies {
     def constraint_version = "1.1.3"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
 
-    def firebase_version = "17.0.0"
-    implementation "com.google.firebase:firebase-core:$firebase_version"
+    def firebase_version = "17.2.2"
     implementation "com.google.firebase:firebase-analytics:$firebase_version"
-    def firebase_messaging_version = "20.0.0"
-    implementation "com.google.firebase:firebase-messaging:$firebase_messaging_version"
 
     // Coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutine}"
